--- a/style.css
+++ b/style.css
@@ -1,5 +1,99 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap");
 
 body {
-  font-family: "Roboto";
+  font-family: "Roboto Condensed", sans-serif;
+  display: flex;
+  justify-content: center;
+  background-color: #0597f2;
+  color: #f2f2f2;
+}
+
+main {
+  display: flex;
+  flex-flow: column wrap;
+  text-align: center;
+  margin: 1rem auto 1.5rem;
+}
+
+h2 {
+  font-weight: 400;
+}
+
+#headers h1 {
+  font-size: 2.3rem;
+}
+
+#headers h2 {
+  font-size: 1.8rem;
+}
+
+#big-cup {
+  background-color: #f2f2f2;
+  color: #024873;
+  border: 4px solid #024873;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+  height: 320px;
+  width: 33%;
+  margin: 1.2rem auto;
+  position: relative;
+  overflow: hidden;
+}
+
+#big-cup .remaining,
+#big-cup .percentage {
+  transition: height 0.5s linear;
+}
+
+#big-cup .remaining {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  height: 100%;
+}
+
+#big-cup .remaining.hidden {
+  display: none;
+}
+
+.remaining #liter {
+  font-weight: bold;
+}
+
+#big-cup .percentage {
+  display: none;
+}
+
+#big-cup .percentage.show {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: #f2f2f2;
+  font-size: 1.7rem;
+  height: 0%;
+  background-color: #1fa9ff;
+}
+
+#sm-cups-sect {
+  display: grid;
+  grid-template: auto / repeat(4, 12%);
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+  color: #024873;
+}
+
+.small-cups {
+  height: 90px;
+  background-color: #f2f2f2;
+  border: 3px solid #024873;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  cursor: pointer;
+}
+
+.small-cups.full {
+  background-color: #1fa9ff;
+  color: #f2f2f2;
 }
