--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ h2 {
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 
 .small-cups.full {
